fix spacing between container elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 body{
-  font-family: 'EB Garamond', ;
+  font-family: 'Quicksand', ;
 }
 .jumbotron {
     padding: 2rem 1rem;
     margin-bottom: 2rem;
-    background-image: url("/home/mary/Documents/moringa-school-projects/Delani-Studios/images/jbackground.jpg");
+    background-image: url("../images/jbackground.jpg");
     background-size: cover;
     height: 800px;
     border-radius: 0.3rem;
@@ -25,7 +25,7 @@ body{
   flex-direction: column;
   width: 100%;
   word-wrap: break-word;
-  background-image: url("/home/mary/Documents/moringa-school-projects/Delani-Studios/images/backgrounds/s_image.jpg");
+  background-image: url("../images/backgrounds/s_image.jpg");
   background-size: cover;
   height: 440px;
   margin-top: 20px;
@@ -35,11 +35,15 @@ body{
   width: 80%;
   justify-content: center;
   align-items: center;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 40px;
+  padding-left: 80px;
   margin-right: auto;
   margin-left: auto;
   display: block;
+  padding-bottom: 20px;
+}
+.do {
+  padding-bottom: 10px;
 }
 .pft {
   width: 100%;
@@ -69,9 +73,9 @@ body{
   left: 0;
   right: 0;
   padding-top: 40%;
-  font-family: 'Simonetta', ;
+  font-family: 'Noto Sans JP', ;
   font-weight: bold;
-  font-size: larger;
+  font-size: x-large;
 }
 .containerTrois {
   width: 80%;
@@ -84,31 +88,37 @@ body{
   display: block;
 }
 .containerQuatre {
-  background-image: url("/home/mary/Documents/moringa-school-projects/Delani-Studios/images/backgrounds/c_image.jpg");
+  background-image: url("../images/backgrounds/c_image.jpg");
   width: 100%;
   height: 480px;
   margin-top: 40px;
   margin-bottom: 20px;
   margin-left:auto;
   background-size: cover;
-  /* background-position: center; */
+  background-position: center;
+}
+#intouch {
+  align-items: center;
 }
 .contact {
   color: white;
   text-align: center;
+  padding-top: 30px;
 }
 input[type="text"] {
+  display: inline;
   background: transparent;
-  width: 60%;
+  width: 70%;
   color: white;
-  margin-left: 200px;
-  margin-right: 50px;
+  align-items: center;
+  margin-left: 100px;
+  margin-right: -100px;
 }
 textarea[type="text"]{
   background: transparent;
   width: 70%;
   color: white;
-  margin-left: 220px;
+  margin-left: 200px;
 }
 .form-control {
   display: block;
